Spacing of footer, try to fix learn file

--- a/app/assets/stylesheets/modules/footer.sass
+++ b/app/assets/stylesheets/modules/footer.sass
@@ -104,5 +104,6 @@ footer
     .footerLinks
       li
         display: inline
+        padding-right: 5px
       ul
         list-style: none
